[package]
name = "requeasy"
version = "0.0.5"
edition = "2021"
description = "This library is for pratice right now"
license = "MIT"
repository = "https://github.com/crack-byte/requeasy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rustls = "0.21.10"
webpki = "0.22.4"
webpki-roots = "0.25"
